Bug 507090 - Individual budgets broken
Summary: Individual budgets broken
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-16 06:31 UTC by Thomas Baumgart
Modified: 2025-07-18 16:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2025-07-16 06:31:57 UTC
SUMMARY

I just upgraded to KMyMoney 5.2 and I’m not sure if I am missing something or if I’ve found a bug. This is running on Pop!_OS 22.04 with all updates installed and I’m running the AppImage version of KMyMoney 5.2

When I’m trying to budget, I’ve got a small number of top level categories and try to assign budget amounts to the top level categories and check the “Include subaccounts” box.

My expenses vary from month to month but I start with the amount I’m expecting things to be on average per month and then adjust as I go. When I check the “Individual” setting for the Period instead of Yearly or Monthly and then switch categories, whatever budget category I switched to “Individual” is grayed out and I can no longer edit it.

The only way I have found to recover is to delete the budget and create a fresh, new budget which of course means I lose whatever I had entered.

I’ve checked and this happens with or without “Include subaccounts” so it appears setting the Period as Individual is what disables editing the budget category in question.

Source: https://discuss.kde.org/t/kmymoney-5-2-with-individual-budget-amounts/37075
Comment 1 Thomas Baumgart 2025-07-18 14:07:37 UTC
Git commit 509818ab0e0bc40b12f14e0134e88646caecd6e9 by Thomas Baumgart.
Committed on 18/07/2025 at 08:25.
Pushed by tbaumgart into branch 'master'.

Disable only sub-accounts in budget

When the include sub-accounts option is checked, the account itself was
disabled. This does not make sense. Only the sub-accounts should be
disabled. This change fixes this to work properly.
FIXED-IN: 5.2.1

M  +1    -1    kmymoney/widgets/budgetviewproxymodel.cpp

https://invent.kde.org/office/kmymoney/-/commit/509818ab0e0bc40b12f14e0134e88646caecd6e9
Comment 2 Thomas Baumgart 2025-07-18 16:17:54 UTC
Git commit 9432df0760b10c61cdf4c968621fd4b36f2aade7 by Thomas Baumgart.
Committed on 18/07/2025 at 08:25.
Pushed by tbaumgart into branch '5.2'.

Disable only sub-accounts in budget

When the include sub-accounts option is checked, the account itself was
disabled. This does not make sense. Only the sub-accounts should be
disabled. This change fixes this to work properly.
FIXED-IN: 5.2.1
(cherry picked from commit 509818ab0e0bc40b12f14e0134e88646caecd6e9)

M  +1    -1    kmymoney/widgets/budgetviewproxymodel.cpp

https://invent.kde.org/office/kmymoney/-/commit/9432df0760b10c61cdf4c968621fd4b36f2aade7