Disable only sub-accounts in budget

When the include sub-accounts option is checked, the account itself was
disabled. This does not make sense. Only the sub-accounts should be
disabled. This change fixes this to work properly.

BUG: 507090
FIXED-IN: 5.2.1